--- a/public/research/index.html
+++ b/public/research/index.html
@@ -108,7 +108,7 @@
                     </div>
                     
                     <div id="site-header-box-subtitle" class=" d-flex justify-content-start ">   
-                        <h2 class="azbalac-subtitle" id="site-description" style="color: #333333;">Banting and PIMS Postdoctoral Fellow</h2>
+                        <h2 class="azbalac-subtitle" id="site-description" style="color: #333333;">Postdoctoral Fellow, Simon Fraser University</h2>
                     </div>
                 </div>
                 
@@ -214,7 +214,7 @@
 
 
   <p>Everyone has a gut microbiome, full of trillions of microbes, that influences
-our health. One person&rsquo;s microbiome might give them a stomach ache, while
+their health. One person&rsquo;s microbiome might give them a stomach ache, while
 another person&rsquo;s might help them metabolize food more efficiently. I want to
 figure out how &ldquo;medicine for the microbiome&rdquo; works&ndash; how can a sick person&rsquo;s
 microbiome be made &ldquo;healthy&rdquo;? Specifically, I am interested in how external
